k8s/deployment.yml
# NAMESPACE
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: dotnet-gotenberg-node-react-pdf-k8s
#   labels:
#     name: dotnet-gotenberg-node-react-pdf-k8s
# ---
# DOTNET
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-gotenberg-generate-pdf-deployment
  # namespace: dotnet-gotenberg-node-react-pdf-k8s
  labels:
    app: dotnet-gotenberg-generate-pdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-gotenberg-generate-pdf
  template:
    metadata:
      labels:
        app: dotnet-gotenberg-generate-pdf
    spec:
      containers:
      - name: dotnet-gotenberg-generate-pdf
        image: liminha/dotnet-gotenberg-generate-pdf:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "200Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-gotenberg-generate-pdf-service
  # namespace: dotnet-gotenberg-node-react-pdf-k8s
spec:
  type: LoadBalancer
  selector:
    app: dotnet-gotenberg-generate-pdf
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 8080
      nodePort: 30001
---
# NODE-FRONTEND-REACT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react-gotenberg-pdf-deployment
  # namespace: dotnet-gotenberg-node-react-pdf-k8s
  labels:
    app: frontend-react-gotenberg-pdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-react-gotenberg-pdf
  template:
    metadata:
      labels:
        app: frontend-react-gotenberg-pdf
    spec:
      containers:
      - name: frontend-react-gotenberg-pdf
        image: liminha/frontend-react-gotenberg-pdf:latest
        ports:
        - containerPort: 4200
        resources:
          requests:
            memory: "200Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-react-gotenberg-pdf-service
  # namespace: dotnet-gotenberg-node-react-pdf-k8s
spec:
  type: LoadBalancer
  selector:
    app: frontend-react-gotenberg-pdf
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
      nodePort: 30002
---
# GOTENBERG
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotenberg-deployment
  # namespace: dotnet-gotenberg-node-react-pdf-k8s
  labels:
    app: gotenberg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotenberg
  template:
    metadata:
      labels:
        app: gotenberg
    spec:
      containers:
      - name: gotenberg
        image: liminha/gotenberg:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "200Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: gotenberg-service
  # namespace: dotnet-gotenberg-node-react-pdf-k8s
spec:
  type: LoadBalancer
  selector:
    app: gotenberg
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 3000
      nodePort: 30003
---
apiVersion: v1
kind: Ingress
metadata:
  name: api
  # namespace: dotnet-gotenberg-node-react-pdf-k8s
spec:
  ingressClassName: external-ingress-nginx
  rules:
  - host: api.devops
---
